--- a/Introduction_to_Python_Programming.ipynb
+++ b/Introduction_to_Python_Programming.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Introduction to Python Programming",
       "provenance": [],
-      "authorship_tag": "ABX9TyOP+9aR4mOhj2u3frZhkrJq",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNA6hjmjGFEX5CBmCPYbKZj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,8 +34,18 @@
         "id": "vYZbr_OuiSAn"
       },
       "source": [
-        "#Review of Python\n",
+        "# #Review of Python\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8p0pgxlHxKkl"
+      },
+      "source": [
+        "######Rosh Stephen E. Santos\n",
+        "######BSECE 2-2"
       ]
     },
     {
@@ -323,6 +334,31 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "GfKo0G0dxwqy",
+        "outputId": "53f2ae65-b91f-481e-92f2-5b1f85939c65"
+      },
+      "source": [
+        "a, b, c = 0, -7, 10\n",
+        "b%=3\n",
+        "print(b)"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "yYlWALpYqLfA",
         "outputId": "f33a27dc-5f3c-48ff-9fda-dc9ca765eebe"
       },
@@ -423,6 +459,34 @@
           },
           "metadata": {},
           "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e4YSZXuUxojG",
+        "outputId": "53d990a0-cffb-4dfe-aa79-ff77386b362c"
+      },
+      "source": [
+        "y = 7\n",
+        "z = 8\n",
+        "y is z"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
         }
       ]
     }
