--- a/Operations_and_Expressions_in_Python.ipynb
+++ b/Operations_and_Expressions_in_Python.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Operations and Expressions in Python",
       "provenance": [],
-      "authorship_tag": "ABX9TyOYUj04qF/ls5HDTamybtGA",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNW7UHk0vc0Pn35f8fD7l2c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,19 +66,42 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "wrlA2EdGrqVj",
-        "outputId": "a9d92ecf-5ace-4f2b-f574-0cee63482e89"
+        "id": "HFLbHr4stKr6",
+        "outputId": "6e776989-9352-4e55-9e6a-d8ac1449e1bd"
       },
       "source": [
         "print (10==9)"
       ],
-      "execution_count": 6,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wrlA2EdGrqVj",
+        "outputId": "b8697321-036f-4061-d186-85a2f9675ff4"
+      },
+      "source": [
+        "print (10+11==21)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
           ]
         }
       ]
@@ -108,7 +132,385 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Cp5fU7KVstIK"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Cp5fU7KVstIK",
+        "outputId": "3b1076bc-4c51-4355-c26c-829348a6eee7"
+      },
+      "source": [
+        "a=10\n",
+        "b=9\n",
+        "print(a>b)\n",
+        "b"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oHsWNxHYttWO",
+        "outputId": "549434f1-d9bc-4f6c-a5a5-7017d6f35e09"
+      },
+      "source": [
+        "c=print (a<b)\n",
+        "c=8"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lR6oFOdOuDqT",
+        "outputId": "7a266acd-3b57-48cb-979b-09c1486a469b"
+      },
+      "source": [
+        "print(bool(\"hello\"))\n",
+        "print(bool(15))\n",
+        "print(bool(\"true\"))\n",
+        "print(bool(\"false\"))\n",
+        "print(bool(\"\"))\n",
+        "print(bool(None))"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "True\n",
+            "True\n",
+            "True\n",
+            "False\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C5IS4OFmu_P_",
+        "outputId": "5c857492-f378-40de-8c3b-007796387251"
+      },
+      "source": [
+        "def myFunction(): return True\n",
+        "print (myFunction())"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DhB9v0ppvgt7",
+        "outputId": "3f289529-d6b7-4653-8521-55fc9ef491a5"
+      },
+      "source": [
+        "def myFunction(): return True\n",
+        "\n",
+        "if myFunction():\n",
+        "  print(\"Yes\")\n",
+        "else:\n",
+        "  print(\"No\")"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yes\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vNFyquPDwD9P",
+        "outputId": "c9b1257f-2c0b-4c99-f9e7-38a4e0eef083"
+      },
+      "source": [
+        "print(10>9)\n",
+        "\n",
+        "a=6\n",
+        "b=7\n",
+        "print(a==b)\n",
+        "print(7==7)\n",
+        "print(a!=a)"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n",
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4trN7Gciw9c1"
+      },
+      "source": [
+        "##Python Operators"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DPd8gY22wzUp",
+        "outputId": "3ef60955-1a31-4b0a-a86d-40d2e0ba9833"
+      },
+      "source": [
+        "print(10+5)\n",
+        "print(10-5)\n",
+        "print(10*5)\n",
+        "print(10/5)\n",
+        "print(10/6)\n",
+        "print(10%6)\n",
+        "print(10//6)\n",
+        "print(10**2)"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n",
+            "5\n",
+            "50\n",
+            "2.0\n",
+            "1.6666666666666667\n",
+            "4\n",
+            "1\n",
+            "100\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HQgbFFAWx_ty"
+      },
+      "source": [
+        "##Bitwise Operators"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kuDn2T5ayGGy",
+        "outputId": "d9417c19-f946-448e-9a4b-1b17914150b0"
+      },
+      "source": [
+        "a=60 # 0011 1100\n",
+        "b=13 # 0000 1101\n",
+        "\n",
+        "print(a^b)\n",
+        "print(a>>2) # 0000 1111 = 15\n",
+        "print(a<<2) #shift to the left twice = 1111 0000"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "49\n",
+            "15\n",
+            "240\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aqJ_xnws02Qq"
+      },
+      "source": [
+        "##Assignment Operators"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OVyIMhGK05o6",
+        "outputId": "0fd77a4f-d6c9-4e4e-ac00-814283f7997b"
+      },
+      "source": [
+        "x=2\n",
+        "x+=3 #same x=x+3\n",
+        "print(x)\n",
+        "X=6\n",
+        "X"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6M2JAwJt2ZYg"
+      },
+      "source": [
+        "##Logical Operators"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hm-sGKQM2clz",
+        "outputId": "9a8c0289-aee6-4543-dd4a-4328d9a1fb2f"
+      },
+      "source": [
+        "x=5\n",
+        "y=8\n",
+        "print(x < y and x==y)\n",
+        "print(x < y or x==y)\n"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_zi-EWrr4GY0"
+      },
+      "source": [
+        "##Identity Operators"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q3KWd2wd4LAj",
+        "outputId": "85b29121-ebe2-47f9-f816-40c23bba1bbe"
+      },
+      "source": [
+        "print(x is y)\n",
+        "print(x is not y) # use print to display both"
+      ],
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Tt7sRYiC4coc"
       },
       "source": [
         ""
