--- a/Midterm_Exam.ipynb
+++ b/Midterm_Exam.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Midterm Exam.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOlB7rsaZ2kILM79NtLoOgZ",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNgHaQjnYtK3eCyXyc26t4J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,30 +31,127 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Q5pf0jXhsyzg"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q5pf0jXhsyzg",
+        "outputId": "587489bb-6e93-4757-ca9e-6f339c6939bb"
       },
       "source": [
-        "Rosh Stephen E.Santos\n",
-        "202014759\n",
-        "20\n",
-        "September 26, 2021\n",
-        "054 Trece Martires St., Samonte Park, Cavite City, Cavite\n",
-        "Bachelor of Science in Electronics and Communications Engineering (BSECE)\n",
-        "1.33"
+        "print(\"Name:\"+\"Rosh Stephen E.Santos\")\n",
+        "print(\"Studen Number:\"+ \"202014759\")\n",
+        "print(\"Age:\"+ \"20\")\n",
+        "print(\"Birthday:\"+\"September 26, 2021\")\n",
+        "print(\"Adress:\"+ \"054 Trece Martires St., Samonte Park, Cavite City, Cavite\")\n",
+        "print(\"Course:\"+ \"Bachelor of Science in Electronics and Communications Engineering (BSECE)\")\n",
+        "print(\"GWA:\"+ \"1.33\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Name:Rosh Stephen E.Santos\n",
+            "Studen Number:202014759\n",
+            "Age:20\n",
+            "Birthday:September 26, 2021\n",
+            "Adress:054 Trece Martires St., Samonte Park, Cavite City, Cavite\n",
+            "Course:Bachelor of Science in Electronics and Communications Engineering (BSECE)\n",
+            "GWA:1.33\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7aZfx_jit72W"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xds6TN9gzQet",
+        "outputId": "7fb7774d-7f4d-4aa1-d230-bb4c926d7aa4"
       },
       "source": [
-        ""
+        "n = 4\n",
+        "answ=\"Y\"\n",
+        "\n",
+        "print(2<n) and (n>6)\n",
+        "print(2<n) or (n==6)\n",
+        "print(not(2<n or n==6))\n",
+        "print(not(n<6))\n",
+        "print(answ==\"Y\" or answ==\"y\")\n",
+        "print(answ==\"Y\") and (answ==\"y\")\n",
+        "print(not(answ==\"y\"))\n",
+        "print((2<n)and(n==5+1)) or (answ==\"No\")\n",
+        "print((n==2)and(n==7)) or (answ==\"Y\")\n",
+        "print(n==2) and ((n==7) or(answ==\"Y\"))\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "True\n",
+            "False\n",
+            "False\n",
+            "True\n",
+            "True\n",
+            "True\n",
+            "False\n",
+            "False\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N2GBZRHlxOPZ",
+        "outputId": "0a4b0b05-917c-4f15-a76a-9dd8b6e18911"
+      },
+      "source": [
+        "x = 2 \n",
+        "y = -3\n",
+        "w = 7\n",
+        "z = -10\n",
+        "\n",
+        "print(x/y)\n",
+        "print(w/y/x)\n",
+        "print(z/y%x)\n",
+        "print(x%-y*w)\n",
+        "print(x%y)\n",
+        "print(z%w-y/x*5+5)\n",
+        "print(9-x%(2+y))\n",
+        "print(z//w)\n",
+        "print((2+y)**2)\n",
+        "print(w/x*2)"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-0.6666666666666666\n",
+            "-1.1666666666666667\n",
+            "1.3333333333333335\n",
+            "14\n",
+            "-1\n",
+            "16.5\n",
+            "9\n",
+            "-2\n",
+            "1\n",
+            "7.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
