--- a/Midterm_Exam.ipynb
+++ b/Midterm_Exam.ipynb
@@ -6,7 +6,7 @@
       "name": "Midterm Exam.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNgHaQjnYtK3eCyXyc26t4J",
+      "authorship_tag": "ABX9TyNipc77OAbWVwknUzl4znaF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,24 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/roshsnts/CPEN-21A-ECE2-2/blob/main/Midterm_Exam.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mhz7GDrW69jl"
+      },
+      "source": [
+        "#MIDTERM EXAM"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4BHoLmfO7W2H"
+      },
+      "source": [
+        "###PROBLEM STATEMENT 1"
       ]
     },
     {
@@ -61,6 +79,15 @@
             "GWA:1.33\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PQtlz3Tg7CdB"
+      },
+      "source": [
+        "###PROBLEM STATEMENT 2"
       ]
     },
     {
@@ -105,6 +132,15 @@
             "False\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6rUVEO4c7Rpj"
+      },
+      "source": [
+        "###PROBLEM STATEMENT 3"
       ]
     },
     {
