--- a/Control_Structure.ipynb
+++ b/Control_Structure.ipynb
@@ -6,7 +6,7 @@
       "name": "Control Structure.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNFJheqE9g8xhcJ9EtdtJja",
+      "authorship_tag": "ABX9TyPZD5OMEpgCBcfw6UAWn3rU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -348,23 +348,67 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yl8es_hl41yr",
-        "outputId": "9f842214-ec63-4556-82a5-9f6de2aa6a1b"
+        "outputId": "7f0c93b8-c58c-4dc3-d137-c836e1d1452a"
       },
       "source": [
-        "a=14\n",
+        "age=int(input(\"Enter your age\"))\n",
         "\n",
-        "if a>=18:\n",
+        "if age>=18:\n",
         "  print(\"Qualified to Vote\")\n",
+        "  elif age==17:\n",
+        "    print(\"Wait one more year\")\n",
         "else:\n",
         "  print(\"Not Qualified to Vote\")"
       ],
-      "execution_count": 42,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Enter your age17\n",
             "Not Qualified to Vote\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Tl2wXKZe7lly"
+      },
+      "source": [
+        "##Example 2\n",
+        "Write a program that determines if the input number is POSITIVE or NEGATIVE. Consider 0 as positive (considering that it contains  no negative sign)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K8YMzcH99nGZ",
+        "outputId": "7a31c199-58e4-4772-9566-7fd5c343d0c3"
+      },
+      "source": [
+        "number=int(input(\"Enter a number\"))\n",
+        "\n",
+        "if number>0:\n",
+        "  print(\"You entered a POSITIVE number\")\n",
+        "elif number==0:\n",
+        "  print(\"You entered ZERO 0\")\n",
+        "else:\n",
+        "  print(\"You entered a NEGATIVE number\")"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number-4\n",
+            "You entered a NEGATIVE number\n"
           ]
         }
       ]
