--- a/Control_Structure.ipynb
+++ b/Control_Structure.ipynb
@@ -6,7 +6,7 @@
       "name": "Control Structure.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPZD5OMEpgCBcfw6UAWn3rU",
+      "authorship_tag": "ABX9TyMvazOIipCd1XgjA1U2JHvL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -348,26 +348,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yl8es_hl41yr",
-        "outputId": "7f0c93b8-c58c-4dc3-d137-c836e1d1452a"
+        "outputId": "039977a3-a614-4567-b77c-f1859f42639d"
       },
       "source": [
         "age=int(input(\"Enter your age\"))\n",
         "\n",
         "if age>=18:\n",
         "  print(\"Qualified to Vote\")\n",
-        "  elif age==17:\n",
+        "elif age==17:\n",
         "    print(\"Wait one more year\")\n",
         "else:\n",
         "  print(\"Not Qualified to Vote\")"
       ],
-      "execution_count": 54,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Enter your age17\n",
-            "Not Qualified to Vote\n"
+            "Wait one more year\n"
           ]
         }
       ]
@@ -389,7 +389,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K8YMzcH99nGZ",
-        "outputId": "7a31c199-58e4-4772-9566-7fd5c343d0c3"
+        "outputId": "807ab47c-a327-4392-e81a-a1302908e881"
       },
       "source": [
         "number=int(input(\"Enter a number\"))\n",
@@ -401,16 +401,26 @@
         "else:\n",
         "  print(\"You entered a NEGATIVE number\")"
       ],
-      "execution_count": 53,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a number-4\n",
-            "You entered a NEGATIVE number\n"
+            "Enter a number2\n",
+            "You entered a POSITIVE number\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xw-XWfdj-JWi"
+      },
+      "source": [
+        "##Example 3\n",
+        "Write a program to determine if the grades"
       ]
     }
   ]
