--- a/Control_Structure.ipynb
+++ b/Control_Structure.ipynb
@@ -6,7 +6,7 @@
       "name": "Control Structure.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMvazOIipCd1XgjA1U2JHvL",
+      "authorship_tag": "ABX9TyOra4ZaQifUJnuWYNzdVwAy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "id": "VAF7zLWBxVVK"
       },
       "source": [
-        "##If statements\n",
+        "##If Statement\n",
         "\n"
       ]
     },
@@ -54,7 +54,7 @@
         "  print(\"b is greater than a\")\n",
         "  "
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
         "elif b>a:\n",
         "  print(\"b is greater than a\")\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
         "else:\n",
         "  print(\"a is equal than b\")"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +164,7 @@
         "b=330\n",
         "print(\"A\") if a>b else print(\"B\")"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +201,7 @@
         "if a>b and c>a:\n",
         "  print(\"The conditions need to be True\")"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +238,7 @@
         "if a>b or c<a:\n",
         "  print(\"One of the conditions is True\")\n"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,19 +265,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x-R7_ckc2y71",
-        "outputId": "944ec924-3280-438b-b75c-4522d8291950"
+        "outputId": "432ddad9-8ffe-4b85-8677-16bbcc0811a6"
       },
       "source": [
-        "x=41\n",
+        "a=41\n",
         "\n",
-        "if x>10:\n",
+        "if a>10:\n",
         "  print(\"Above 10\")\n",
-        "  if x>20:\n",
+        "  if a>20:\n",
         "    print(\"Above 20\")\n",
         "  else:\n",
         "    print(\"Not above 20\")"
       ],
-      "execution_count": 24,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,21 +305,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6nqJOme94O_R",
-        "outputId": "ec6468df-a36a-4634-8f1c-18a452e40c30"
+        "outputId": "b326c69a-1e6e-4219-a8c4-46afb0cba3f2"
       },
       "source": [
-        "x=41\n",
+        "a=41\n",
         "\n",
-        "if x>10:\n",
+        "if a>10:\n",
         "  print(\"Above 10\")\n",
-        "  if x>20:\n",
+        "  if a>20:\n",
         "    print(\"Above 20\")\n",
         "  else:\n",
         "    print(\"Not above 20\")\n",
         "else:\n",
         "  print(\"Below 10\")"
       ],
-      "execution_count": 27,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,7 +360,7 @@
         "else:\n",
         "  print(\"Not Qualified to Vote\")"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,7 +401,7 @@
         "else:\n",
         "  print(\"You entered a NEGATIVE number\")"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,7 +420,43 @@
       },
       "source": [
         "##Example 3\n",
-        "Write a program to determine if the grades"
+        "Write a program to determine if the grades are:\n",
+        "\n",
+        "    If:\n",
+        "                   grade >= 75, \"Passed\"\n",
+        "                   grade = 74, \"Remedial\"\n",
+        "                   grade < 74, \"Failed\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "enfS91SqAHrL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0c11a224-251b-47d2-fd2e-847a8bebc614"
+      },
+      "source": [
+        "grade = int(input(\"Enter your grade\"))\n",
+        "\n",
+        "if grade >=75:\n",
+        "  print(\"Passed\")\n",
+        "elif grade == 74:\n",
+        "  print (\"Remedial\")\n",
+        "else:\n",
+        "  print(\"Failed\")"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your grade74\n",
+            "Remedial\n"
+          ]
+        }
       ]
     }
   ]
