--- a/Loop_Statements.ipynb
+++ b/Loop_Statements.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Loop Statements.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPcHiQ10GXqpysMlXDXPQ6/",
+      "authorship_tag": "ABX9TyOfXNl2Dg2zL8j8Sm7PR6aK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -147,46 +147,29 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 341
+          "base_uri": "https://localhost:8080/"
         },
         "id": "2RuFX3Yl4Duj",
-        "outputId": "ce06d6e4-686d-4f49-b760-c35056c7d220"
+        "outputId": "1e7ba6e2-6e8d-45c5-ba56-8004c7f1e50f"
       },
       "source": [
-        "for x in \"Sunday\":\n",
-        "  print(x)\n",
-        "\n",
-        "S\n",
-        "u\n",
-        "n\n",
-        "d\n",
-        "a\n",
-        "y\n"
+        "for x in \"Thursday\":\n",
+        "  print(x)\n"
       ],
-      "execution_count": 31,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "S\n",
+            "T\n",
+            "h\n",
             "u\n",
-            "n\n",
+            "r\n",
+            "s\n",
             "d\n",
             "a\n",
             "y\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-31-b7a2a47330bd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mS\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'S' is not defined"
           ]
         }
       ]
@@ -197,7 +180,7 @@
         "id": "rRc_5_kO5NPb"
       },
       "source": [
-        "The rang() function"
+        "The range() function"
       ]
     },
     {
@@ -428,11 +411,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AW0c2n3Z-Nx3",
-        "outputId": "de5de436-7794-4aea-cb28-b4dd4c37fd97",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AW0c2n3Z-Nx3",
+        "outputId": "de5de436-7794-4aea-cb28-b4dd4c37fd97"
       },
       "source": [
         "i=1\n",
@@ -469,11 +452,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GYR5BlTj_IMy",
-        "outputId": "b1b4cf71-8bb5-49a5-c710-9893dc655384",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GYR5BlTj_IMy",
+        "outputId": "b1b4cf71-8bb5-49a5-c710-9893dc655384"
       },
       "source": [
         "i=1\n",
@@ -514,11 +497,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Imh59PaH_w6x",
-        "outputId": "032b7bff-d837-4e3a-8fc6-8d535f917ef0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Imh59PaH_w6x",
+        "outputId": "032b7bff-d837-4e3a-8fc6-8d535f917ef0"
       },
       "source": [
         "#Create a Python Program that displays Hello 0 to Hello 10 vertically\n",
@@ -562,11 +545,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SIRXjq-LBNJw",
-        "outputId": "a91ee092-5292-4a45-c2c5-f0f210f925dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SIRXjq-LBNJw",
+        "outputId": "a91ee092-5292-4a45-c2c5-f0f210f925dc"
       },
       "source": [
         "#Create a Python Program that displays integers less than 10 but not less than 3\n",
@@ -594,11 +577,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PYtZdos4Cw2u",
-        "outputId": "6a0beacf-cb8d-44de-be01-e994ab0c5cf5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PYtZdos4Cw2u",
+        "outputId": "6a0beacf-cb8d-44de-be01-e994ab0c5cf5"
       },
       "source": [
         "i=3\n",
