--- a/Final_Exam.ipynb
+++ b/Final_Exam.ipynb
@@ -6,7 +6,7 @@
       "name": "Final Exam.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOrYEmVnpx4i5OsCSTp0rIM",
+      "authorship_tag": "ABX9TyOrv7Vnrs86FKTeEMlaHpCe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "id": "O8urjM_wgUQI",
         "outputId": "da989abb-6186-474f-fdfc-d518c73a7f84"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -84,32 +84,32 @@
         "n = 1\n",
         "summ = 0\n",
         "\n",
-        "while n <= 5:\n",
+        "while n < 6:\n",
         "    number = int(input(\"Enter 5 numbers: \"))\n",
         "    if n==1 or n==5:\n",
         "        summ = summ + number\n",
         "    n=n+1\n",
-        "print(\"The sum of first and last number of the 5 numbers you entered is:\",summ)\n"
+        "print(\"The sum of first and last number among the 5 numbers you entered is:\",summ)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "v4z44LcGvdhP",
-        "outputId": "292f1517-e227-4b10-985f-c247c63270e5"
+        "outputId": "fe60fcb5-9349-45b7-91a3-be717280cdc6"
       },
-      "execution_count": 82,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter 5 numbers: 1\n",
             "Enter 5 numbers: 2\n",
-            "Enter 5 numbers: 3\n",
-            "Enter 5 numbers: 4\n",
-            "Enter 5 numbers: 5\n",
-            "The sum of first and last number of the 5 numbers you entered is: 6\n"
+            "Enter 5 numbers: 6\n",
+            "Enter 5 numbers: 8\n",
+            "Enter 5 numbers: 9\n",
+            "Enter 5 numbers: 9\n",
+            "The sum of first and last number among the 5 numbers you entered is: 11\n"
           ]
         }
       ]
@@ -150,7 +150,7 @@
         "id": "7gwJRKSuxpS6",
         "outputId": "550b9b89-5a01-4b8d-89b8-743162dc7237"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
